font flickering issue solve with animation

--- a/assets/sass/base/_animation.scss
+++ b/assets/sass/base/_animation.scss
@@ -1,5 +1,3 @@
-// -- Slide Animations -- //
-
 @include keyframes(slide-in-down) {
   0% {
     transform: translate(0,-12%);
@@ -12,7 +10,6 @@
   }
 }
 
-// Slide in Left to Center
 @include keyframes(slide-in-left) {
   0% {
     transform: translate(-12%,0);
@@ -21,6 +18,28 @@
 
   100% {
     transform: translate(0,0);
+    opacity: 1;
+  }
+}
+
+@include keyframes(slide-in-down-little) {
+  0% {
+    transform: translate(0,-1%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(0,0);
+    opacity: 1;
+  }
+}
+
+@include keyframes(fade-in) {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
     opacity: 1;
   }
 }
