--- a/assets/sass/components/_summary.scss
+++ b/assets/sass/components/_summary.scss
@@ -1,7 +1,7 @@
 .summary-card {
   margin: 0 0.5rem;
   padding: 0 0.5rem;
-  @include animation('slide-in-down .2s .25s 1 ease-in both');
+  @include animation('slide-in-down .2s .3s 1 ease-in both');
 
   .title {
     a {
@@ -39,7 +39,7 @@
   &__image {
     width: 100%;
     height: 100%;
-    @include animation('slide-in-left .15s .6s 1 ease-in both');
+    @include animation('slide-in-left .2s .6s 1 ease-in both');
    
     &-wrapper {
       height: 100%;
@@ -81,7 +81,7 @@
 
 .summary-classic {
   padding: 0 1rem;
-  @include animation('slide-in-down .2s .25s 1 ease-in both');
+  @include animation('slide-in-down .2s .3s 1 ease-in both');
 
   .title {
     font-size: 24px;
@@ -129,7 +129,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-    @include animation('slide-in-left .1s .6s 1 ease-in both');
+    @include animation('slide-in-left .2s .6s 1 ease-in both');
         
     &-wrapper {
       max-width: 130px;
@@ -165,7 +165,7 @@
 
 .summary-compact {
   padding: 0 1rem;
-  @include animation('slide-in-down .2s .25s 1 ease-in both');
+  @include animation('slide-in-down .2s .3s 1 ease-in both');
   
   &__flexbox {
     @include flexbox();
