--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -14,6 +14,7 @@
   @include flexbox();
   @include justify-content(center);
   @include flex-direction(column);
+  @include animation('fade-in .15s .1s 1 ease-in both');
 
   &__title {
     line-height: 1.1;
