--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -11,7 +11,7 @@
     line-height: 3rem;
     overflow-wrap: break-word;
 
-    @include animation('slide-in-down .2s .25s 1 ease-in both');
+    @include animation('slide-in-left .2s .15s 1 ease-in both');
     @include themify($themes) {
       color: themed("single-header-title-color");
     }
@@ -47,7 +47,7 @@
   }
 
   &__contents {
-    @include animation('slide-in-left .15s .6s 1 ease-in both');
+    @include animation('slide-in-down-little .3s .4s 1 ease-in both');
     &--gallery {
       overflow: hidden;
     }
